--- a/Final Project LaTeX/Final Report/references.bib
+++ b/Final Project LaTeX/Final Report/references.bib
@@ -106,6 +106,16 @@
   organization = {{Nielsen Norman Group}}
 }
 
+@online{FirebaseAuthentication2021,
+  title = {Firebase {{Authentication}}},
+  date = {2021},
+  url = {https://firebase.google.com/docs/auth},
+  urldate = {2021-08-25},
+  langid = {english},
+  organization = {{Firebase}},
+  file = {/home/josh/Zotero/storage/IHPWAALR/auth.html}
+}
+
 @online{FlutterBeautifulNative,
   title = {Flutter - {{Beautiful}} Native Apps in Record Time},
   url = {https://flutter.dev/},
@@ -279,6 +289,18 @@
   langid = {british},
   organization = {{The State of the Octoverse}},
   file = {/home/josh/Zotero/storage/RMBKBFHK/2019.html}
+}
+
+@online{techblogEBayMotorsState2021,
+  title = {{{eBay Motors}} \& {{State Management}}},
+  author = {TechBlog, eBay},
+  date = {2021-04-02T17:35:19},
+  url = {https://medium.com/ebaytech/ebay-motors-state-management-bd85cfc602a2},
+  urldate = {2021-08-24},
+  abstract = {Learn how we avoided the state management debate when building the eBay Motors app.},
+  langid = {english},
+  organization = {{eBayTech}},
+  file = {/home/josh/Zotero/storage/3AY3GYKT/ebay-motors-state-management-bd85cfc602a2.html}
 }
 
 @online{TrimCheckHomeHaircuts,
